add details about html & cpp

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # use vscode 2020
 .vscode/*
+web_dev/html&css&js/ex_html/.idea/
+web_dev/html&css&js/ex_html/res/
+web_dev/html&css&js/ex_imudge/.idea/
+web_dev/html&css&js/ex_imudge/imgs/
